--- a/css/style.less
+++ b/css/style.less
@@ -88,9 +88,8 @@ body {
 a {
     text-decoration: none;
     outline: none;
-    color: #cac9c9;
-//  transition: color 0.3s linear;
-//  -webkit-transition: color 0.3s linear;
+    color: #cac9c9; //  transition: color 0.3s linear;
+    //  -webkit-transition: color 0.3s linear;
 }
 .fl {
     float: left;
@@ -111,16 +110,16 @@ a {
 .wrapper {
     min-width: 1000px;
 }
-.header{
+.header {
     width: 100%;
     height: 100px;
     background-color: @color;
 }
-.content{
+.content {
     width: 100%;
     height: 100%;
 }
-.slide_fl{
+.slide_fl {
     .fl;
     width: 228px;
     border-right: 2px solid #920303;
@@ -130,26 +129,28 @@ a {
     font-size: 16px;
     text-align: center;
     min-height: 400px;
-    .name,.id,.money{
+    .name,
+    .id,
+    .money {
         line-height: 35px;
-        span{
+        span {
             margin-left: 10px;
             font-size: 14px;
         }
     }
-    .money{
-        i{
+    .money {
+        i {
             display: inline-block;
             width: 18px;
             height: 26px;
-            background: url(../img/icon.png) no-repeat;
+            background: url("../img/icon.png") no-repeat;
             position: relative;
             top: 5px;
             *top: 0;
             margin-right: 5px;
         }
     }
-    .extract_btn{
+    .extract_btn {
         display: inline-block;
         *display: block;
         *zoom: 1;
@@ -161,58 +162,59 @@ a {
         .radius(3px);
         margin-top: 10px;
     }
-    .menu{
+    .menu {
         margin-top: 25px;
-        li{
+        li {
             height: 45px;
             line-height: 45px;
             margin-bottom: 15px;
-            a{
+            a {
                 color: #fff;
                 display: block;
-                &.active,&:hover{
+                &.active,
+                &:hover {
                     background-color: #da9f1e;
                 }
             }
         }
     }
 }
-.slide_con{
+.slide_con {
     background-color: #fff;
     margin-left: 230px;
-    .slide_main{
+    .slide_main {
         padding: 27px 20px;
         overflow: hidden;
-        .this_tit{
+        .this_tit {
             background-color: #da9f1e;
             height: 40px;
             line-height: 40px;
             color: #fff;
             padding-left: 20px;
         }
-        strong{
+        strong {
             color: #6e6e6e;
             font-size: 18px;
             line-height: 80px;
             padding-left: 35px;
             display: block;
             font-weight: normal;
-            i{
+            i {
                 display: inline-block;
                 width: 25px;
                 height: 26px;
-                background: url(../img/icon.png) no-repeat -21px 0;
+                background: url("../img/icon.png") no-repeat -21px 0;
                 margin-right: 18px;
                 position: relative;
                 top: 5px;
                 *top: 0;
             }
         }
-        .bind_bank{
+        .bind_bank {
             .fl;
             padding-left: 10px;
             line-height: 80px;
-            a{
+            a {
                 display: inline-block;
                 width: 75px;
                 height: 34px;
@@ -224,16 +226,16 @@ a {
                 margin-left: 20px;
             }
         }
-        .bind_bank_warn{
+        .bind_bank_warn {
             .fl;
             margin-left: 55px;
             line-height: 80px;
-            i{
+            i {
                 display: inline-block;
                 position: relative;
                 top: 5px;
                 *top: 0;
-                background: url(../img/icon.png) no-repeat -49px 0;
+                background: url("../img/icon.png") no-repeat -49px 0;
                 width: 25px;
                 height: 25px;
                 margin-right: 15px;
@@ -241,14 +243,14 @@ a {
         }
     }
 }
-.slide_top{
+.slide_top {
     height: 80px;
 }
-.this_form{
+.this_form {
     margin: 30px 0 0 60px;
-    li{
+    li {
         height: 60px;
-        label{
+        label {
             display: block;
             line-height: 40px;
             width: 110px;
@@ -257,7 +259,7 @@ a {
             float: left;
             margin-right: 15px;
         }
-        input{
+        input {
             width: 354px;
             height: 38px;
             line-height: 38px;
@@ -267,7 +269,7 @@ a {
             border: 1px solid #d1d1d1;
         }
     }
-    .form_btn{
+    .form_btn {
         width: 160px;
         height: 50px;
         color: #fff;
@@ -278,7 +280,7 @@ a {
         cursor: pointer;
     }
 }
-.footer{
+.footer {
     color: #572813;
     background-color: #da9f1e;
     width: 100%;
@@ -287,50 +289,51 @@ a {
     clear: both;
     text-align: center;
 }
-.vip_table{
-    table{
+.vip_table {
+    table {
         width: 100%;
-        td,th{
+        td,
+        th {
             vertical-align: middle;
             text-align: center;
             color: #6e6e6e;
             border: 1px solid #cbcbcb;
         }
-        tr{
+        tr {
             height: 39px;
-            &:hover{
+            &:hover {
                 background-color: #ededed;
             }
         }
-        th{
+        th {
             background-color: #f9eac9;
         }
-        td{
-            span{
+        td {
+            span {
                 color: @color;
             }
-            a{
+            a {
                 color: #da9f1e;
                 text-decoration: underline;
             }
-            &.import_name{
-                a{
+            &.import_name {
+                a {
                     color: #6E6E6E;
                 }
             }
         }
     }
 }
-.page{
+.page {
     text-align: center;
     margin-top: 45px;
-    a{
+    a {
         color: #572813;
         display: inline-block;
         padding: 0 10px;
     }
 }
-.this_winpop{
+.this_winpop {
     width: 420px;
     height: 270px;
     position: fixed;
@@ -339,7 +342,7 @@ a {
     margin: -135px 0 0 -210px;
     background: #f1deb3;
     border: 1px solid @color;
-    .winpop_tit{
+    .winpop_tit {
         color: #fdcc22;
         background: @color;
         height: 40px;
@@ -347,23 +350,23 @@ a {
         text-align: center;
         font-size: 18px;
     }
-    .winpop_con{
+    .winpop_con {
         color: #6e6e6e;
         text-align: center;
         padding: 20px 0;
         overflow: hidden;
-        span{
+        span {
             color: @color;
         }
-        dt{
+        dt {
             font-size: 18px;
             line-height: 45px;
         }
-        dd{
+        dd {
             line-height: 45px;
         }
     }
-    .winpop_btn{
+    .winpop_btn {
         display: block;
         text-align: center;
         color: #fff;
@@ -375,16 +378,16 @@ a {
         margin: 15px auto 0;
     }
 }
-.search_box{
-    li{
+.search_box {
+    li {
         margin-right: 30px;
         .fl;
         line-height: 80px;
     }
-    label{
-        padding: 0 15px;        
+    label {
+        padding: 0 15px;
     }
-    input{
+    input {
         width: 210px;
         height: 33px;
         line-height: 33px;
@@ -392,11 +395,164 @@ a {
         color: #333;
         border: 1px solid #cfcfcf;
     }
-    .search_btn{
+    .search_btn {
         width: 76px;
         height: 37px;
         color: #fff;
         background: #da9f1e;
         border: none;
     }
+}
+.form_bg {
+    background-color: #e40d0d;
+    .footer {
+        background-color: transparent;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+    }
+}
+.form_box {
+    position: relative;
+    width: 1200px;
+    overflow: hidden;
+    margin: 0 auto;
+}
+.form_login_box {
+    background: url("../img/login_bg.jpg") no-repeat center top;
+    height: 860px;
+}
+.form_sign_box {
+    background: url("../img/sign_bg.jpg") no-repeat center top;
+    height: 1082px;
+}
+.form_winpop {
+    background: url("../img/winpop_bg.png");
+    border: 1px solid #b27f13;
+    overflow: hidden;
+}
+.login_box {
+    margin: 125px 0 0 595px;
+    width: 358px;
+    .login_winpop {
+        height: 268px;
+        ul {
+            li {
+                width: 100%;
+                margin-bottom: 16px;
+                position: relative;
+                input {
+                    background-color: #fff;
+                    height: 40px;
+                    line-height: 40px;
+                    padding-left: 12%;
+                    border: none;
+                    width: 88%;
+                }
+                i {
+                    position: absolute;
+                    display: block;
+                    background: url("../img/icon.png") no-repeat -79px 0;
+                    left: 13px;
+                    top: 13px;
+                    &.user_icon {
+                        width: 14px;
+                        height: 14px;
+                    }
+                    &.pwd_icon {
+                        width: 13px;
+                        height: 15px;
+                        background-position: -95px 0;
+                    }
+                }
+            }
+        }
+    }
+}
+.this_form_btn {
+    width: 100%;
+    height: 45px;
+    color: #fff;
+    background-color: #e40d0d;
+    border: none;
+    margin-top: 10px;
+    font-size: 18px;
+    cursor: pointer;
+}
+.login_other {
+    text-align: center;
+    margin-top: 20px;
+    color: #fff;
+    a {
+        color: #fff;
+        &.sign_href {
+            color: #fffc00;
+        }
+    }
+}
+.login_tit,
+.sign_tit {
+    text-align: center;
+    height: 50px;
+    color: #572813;
+    font-size: 24px;
+}
+.login_padding {
+    padding: 30px 30px 0;
+    overflow: hidden;
+}
+.service {
+    font-size: 18px;
+    color: #572813;
+    margin: 130px 0 0 798px;
+}
+.sign_box {
+    margin: 300px auto 0;
+    width: 538px;
+    .sign_tit {
+        text-align: left;
+    }
+    .sign_winpop {
+        height: 645px;
+        ul {
+            li {
+                width: 100%;
+                margin-bottom: 23px;
+                *margin-bottom: 20px;
+                float: left;
+                position: relative;
+                zoom: 1;
+                input {
+                    background-color: #fff;
+                    height: 38px;
+                    line-height: 38px;
+                    padding: 0 0 0 3%;
+                    border: 1px solid #d1d1d1;
+                    width: 97%;
+                }
+                .code_btn {
+                    width: 98px;
+                    height: 32px;
+                    line-height: 32px;
+                    text-align: center;
+                    color: #fff;
+                    background-color: #e40d0d;
+                    font-size: 14px;
+                    position: absolute;
+                    right: 2px;
+                    top: 5px;
+                    display: block;
+                }
+            }
+        }
+        .this_form_btn {
+            overflow: hidden;
+            width: 160px;
+            margin: 10px 0 0 103px;
+        }
+    }
+}
+.sign_padding {
+    padding: 30px 87px 0;
+    overflow: hidden;
 }
