--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,7 @@ a {
 }
 .this_winpop {
   width: 420px;
-  height: 270px;
+  min-height: 370px;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -361,7 +361,7 @@ a {
   line-height: 40px;
   background: #e40d0d;
   font-size: 18px;
-  margin: 15px auto 0;
+  margin: 0 auto;
 }
 .search_box li {
   margin-right: 30px;
@@ -513,7 +513,12 @@ a {
   border: 1px solid #d1d1d1;
   width: 97%;
 }
-.sign_box .sign_winpop ul li .code_btn {
+.sign_box .sign_winpop .this_form_btn {
+  overflow: hidden;
+  width: 160px;
+  margin: 10px 0 0 103px;
+}
+.code_btn {
   width: 98px;
   height: 32px;
   line-height: 32px;
@@ -526,13 +531,45 @@ a {
   top: 5px;
   display: block;
 }
-.sign_box .sign_winpop .this_form_btn {
-  overflow: hidden;
-  width: 160px;
-  margin: 10px 0 0 103px;
-}
 .sign_padding {
   padding: 30px 87px 0;
   overflow: hidden;
+}
+.winpop_form {
+  padding: 20px 40px;
+}
+.winpop_form li {
+  height: 50px;
+  float: left;
+  width: 100%;
+  position: relative;
+}
+.winpop_form li input {
+  width: 97%;
+  padding: 0 0 0 3%;
+  height: 40px;
+  line-height: 40px;
+  background-color: #fff;
+  border: none;
+  font-size: 14px;
+  color: #333;
+}
+.winpop_form .winpop_btn_box {
+  padding-top: 10px;
+  clear: both;
+  text-align: center;
+}
+.winpop_form .winpop_btn_box a {
+  display: inline-block;
+  text-align: center;
+  background-color: #e40d0d;
+  color: #fff;
+  font-size: 14px;
+  height: 40px;
+  line-height: 40px;
+  width: 80px;
+}
+.winpop_form .winpop_btn_box a.cancel_btn {
+  margin-left: 20px;
 }
 /*# sourceMappingURL=style.css.map */
