--- a/css/style.less
+++ b/css/style.less
@@ -522,7 +522,7 @@ a {
                 float: left;
                 position: relative;
                 zoom: 1;
-                input {
+                input[type="text"],input[type="password"] {
                     background-color: #fff;
                     height: 38px;
                     line-height: 38px;
@@ -542,15 +542,14 @@ a {
 .code_btn {
     width: 98px;
     height: 32px;
-    line-height: 32px;
-    text-align: center;
+    border: none;
     color: #fff;
     background-color: #e40d0d;
     font-size: 14px;
     position: absolute;
     right: 2px;
-    top: 5px;
-    display: block;
+    top: 4px;
+    cursor: pointer;
 }
 .sign_padding {
     padding: 30px 87px 0;
@@ -563,7 +562,7 @@ a {
         float: left;
         width: 100%;
         position: relative;
-        input {
+        input[type="text"],input[type="password"] {
             width: 97%;
             padding: 0 0 0 3%;
             height: 40px;
