--- a/css/style.css
+++ b/css/style.css
@@ -146,12 +146,13 @@ a {
   *zoom: 1;
   width: 80px;
   height: 26px;
-  line-height: 26px;
   background-color: #fce07c;
+  border: none;
   color: #e40d0d;
   border-radius: 3px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
+  cursor: pointer;
   margin-top: 10px;
 }
 .slide_fl .menu {
@@ -168,6 +169,20 @@ a {
 }
 .slide_fl .menu li a.active,
 .slide_fl .menu li a:hover {
+  background-color: #da9f1e;
+}
+.slide_fl .menu li input[type="button"],
+.slide_fl .menu li input[type="submit"] {
+  width: 100%;
+  height: 45px;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  background-color: #e40d0d;
+}
+.slide_fl .menu li input[type="button"]:hover,
+.slide_fl .menu li input[type="submit"]:hover {
   background-color: #da9f1e;
 }
 .slide_con {
@@ -353,15 +368,16 @@ a {
   line-height: 45px;
 }
 .this_winpop .winpop_btn {
+  border: none;
   display: block;
   text-align: center;
   color: #fff;
   width: 160px;
   height: 40px;
-  line-height: 40px;
   background: #e40d0d;
   font-size: 18px;
   margin: 0 auto;
+  cursor: pointer;
 }
 .search_box li {
   margin-right: 30px;
@@ -571,6 +587,22 @@ a {
   width: 80px;
 }
 .winpop_form .winpop_btn_box a.cancel_btn {
+  margin-left: 20px;
+}
+.winpop_form .winpop_btn_box input[type="button"],
+.winpop_form .winpop_btn_box input[type="submit"] {
+  display: inline-block;
+  text-align: center;
+  background-color: #e40d0d;
+  border: none;
+  color: #fff;
+  font-size: 14px;
+  height: 40px;
+  width: 80px;
+  cursor: pointer;
+}
+.winpop_form .winpop_btn_box input[type="button"].cancel_btn,
+.winpop_form .winpop_btn_box input[type="submit"].cancel_btn {
   margin-left: 20px;
 }
 /*# sourceMappingURL=style.css.map */
